Time: 32 ms (79.01%), Space: 58.6 MB (94.2%) - LeetHub